[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpc"
path = "src/rpc_main.rs"

[[bin]]
name = "worker"
path = "src/worker_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infras = { path = "../infras"}
