[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version ="0.21.5",features = ["r2d2"]}
r2d2 = "0.8.10"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "mysql","chrono"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
chrono = "0.4"